--- a/Resources/views/Base/breadcrumbs.html.twig
+++ b/Resources/views/Base/breadcrumbs.html.twig
@@ -1,4 +1,4 @@
-{% if volleyball_breadcrumbs()|length %}
+{% if project_punchclock_breadcrumbs()|length %}
   {% spaceless %}
     <ul id="{{ listId }}" class="{{ listClass }}" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       {% for b in breadcrumbs %}
