--- a/Resources/views/Datatable/datatable.html.twig
+++ b/Resources/views/Datatable/datatable.html.twig
@@ -38,7 +38,7 @@
 {% endblock %}
 
 {% block datatable_controls %}
-{% include 'VolleyballUtilityBundle:Datatable:datatable.controls.html.twig' with { 'type': type, 'slug': item.slug } %}
+{% include 'ProjectPunchclockCoreBundle:Datatable:datatable.controls.html.twig' with { 'type': type, 'slug': item.slug } %}
 {% endblock %}
 
 {% block datatable_foot %}
